# tektite

./: .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  README.md  components.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
plans/: v0.1-agent-execution-plan.md  v0.1-release-plan.md
scripts/: fetch-embed-model.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/tektite-embed/: Cargo.toml
src-tauri/crates/tektite-embed/src/: cache.rs  chunker.rs  embedder.rs  lib.rs  mutual_knn.rs  onnx.rs  queue.rs  store.rs
src-tauri/crates/tektite-index/: Cargo.toml
src-tauri/crates/tektite-index/src/: graph.rs  ingest.rs  lib.rs  link_health.rs  query.rs  rename.rs  resolve.rs  schema.rs
src-tauri/crates/tektite-index/tests/: integration.rs
src-tauri/crates/tektite-parser/: Cargo.toml
src-tauri/crates/tektite-parser/src/: lib.rs
src-tauri/crates/tektite-search/: Cargo.toml
src-tauri/crates/tektite-search/src/: lib.rs
src-tauri/crates/tektite-vault/: Cargo.toml
src-tauri/crates/tektite-vault/src/: lib.rs  scan.rs  watcher.rs
src-tauri/resources/embed/: README.md
src-tauri/src/: lib.rs
src/app/lib/: command-palette.ts  editor-navigation.ts  note-templates.ts  semantic-navigation.ts
src/app/lib/__tests__/: command-palette.test.ts  commands.svelte.test.ts  editor-navigation.test.ts  note-templates.test.ts  wiki-link-parse.test.ts  wiki-link.test.ts  workspace-tree.test.ts  workspace.svelte.test.ts
src/app/lib/components/: ActivityBar.svelte  AmbiguousLinkDialog.svelte  AuraSuggestion.svelte  BacklinksPanel.svelte  CommandPalette.svelte  DeleteDialog.svelte  EditorPane.svelte  EmptyPane.svelte  FileExplorer.svelte  GraphEdgeContextMenu.svelte  GraphFindOverlay.svelte  GraphNodeContextMenu.svelte  GraphPanel.svelte  GraphSettingsDrawer.svelte  GraphView.svelte  LeafPane.svelte  LoadingScreen.svelte  PaneHeader.svelte  PaneLayout.svelte  RelatedNotesPanel.svelte  RenameDialog.svelte  SearchPanel.svelte  Shell.svelte  Sidebar.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte  TabOverflow.svelte  Titlebar.svelte  UnresolvedLinksPanel.svelte  VaultPicker.svelte  VaultPopover.svelte
src/app/lib/components/ui/: Button.svelte  Card.svelte  ListItem.svelte  Surface.svelte  Text.svelte
src/app/lib/editor/: live-preview.ts  theme.ts  wiki-link-parse.ts  wiki-link.ts
src/app/lib/stores/: aura.svelte.ts  commands.svelte.ts  editor-navigation.svelte.ts  editor.svelte.ts  embedStatus.svelte.ts  files.svelte.ts  indexStats.svelte.ts  operationStore.svelte.ts  pinned-notes.svelte.ts  platform.svelte.ts  vault.svelte.ts  workspace-tree.ts  workspace.svelte.ts
src/routes/: +layout.svelte  +page.svelte
