[workspace]
members = [
    ".",
    "crates/tektite-parser",
    "crates/tektite-index",
    "crates/tektite-vault",
    "crates/tektite-search",
    "crates/tektite-embed",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[package]
name = "tektite"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tektite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tektite-vault = { path = "crates/tektite-vault" }
tektite-index = { path = "crates/tektite-index" }
tektite-parser = { path = "crates/tektite-parser" }
tektite-search = { path = "crates/tektite-search" }
tektite-embed = { path = "crates/tektite-embed" }
