[package]
name = "tektite-index"
version = "0.1.0"
edition = "2021"

[dependencies]
tektite-parser = { path = "../tektite-parser" }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
