[package]
name = "tektite-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
tektite-parser = { path = "../tektite-parser" }
tektite-index = { path = "../tektite-index" }
tektite-embed = { path = "../tektite-embed" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
notify = "6"
notify-debouncer-full = "0.3"

[dev-dependencies]
tempfile = "3"
tektite-embed = { path = "../tektite-embed", features = ["test-support"] }
